[package]
name = "parser"
version = "0.1.0"
authors = ["Julian Lazaras <umbrasdracodominus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "*"
err-derive = "*"
serde_derive = "*"
serde = "*"
ron = "*"
rayon = "*"
